Fixed Alignment Issues
Previously when nesting elements with font awesome icons within boxes
the icon alignment was off. This is now resolved.

Fixes #27

--- a/includes/css/less/box.less
+++ b/includes/css/less/box.less
@@ -34,7 +34,7 @@
     margin: 1em 0;
     padding: 1em;
 
-    i.fa {
+    > i.fa {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
@@ -58,12 +58,12 @@
     .shortcode-box( @black );
 }
 
-.arconix-box-blue { 
-    .shortcode-box( @blue ); 
+.arconix-box-blue {
+    .shortcode-box( @blue );
 }
 
-.arconix-box-lblue { 
-    .shortcode-box( @lblue ); 
+.arconix-box-lblue {
+    .shortcode-box( @lblue );
 }
 
 .arconix-box-green {
